<?xml version="1.0" encoding="utf-8"?>
<!-- schermata per selezionare il proprio ruolo al primo accesso tramite account Google -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/care_background"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/screen_padding">

            <!-- Titolo -->
            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completa_profilo_title"
                android:textSize="@dimen/text_size_title"
                android:textColor="@color/care_on_surface"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/spacing_large" />

            <TextView
                android:id="@+id/subtitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/completa_profilo_subtitle"
                android:textSize="@dimen/text_size_body"
                android:textColor="@color/care_on_surface"
                app:layout_constraintTop_toBottomOf="@id/titleText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_small" />

            <!-- Nome: pre-compilato con il nome fornito da Google quando disponibile -->
            <EditText
                android:id="@+id/nomeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_target_min"
                android:hint="@string/register_nome_hint"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_size_body"
                app:layout_constraintTop_toBottomOf="@id/subtitleText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_large" />

            <TextView
                android:id="@+id/ruoloLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_ruolo_label"
                android:textSize="@dimen/text_size_body"
                android:textColor="@color/care_on_surface"
                app:layout_constraintTop_toBottomOf="@id/nomeInput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/spacing_large" />

            <!-- scelte ruolo -->
            <RadioGroup
                android:id="@+id/ruoloRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ruoloLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_small">

                <RadioButton
                    android:id="@+id/ruoloAnzianoRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target_min"
                    android:text="@string/register_ruolo_anziano"
                    android:textSize="@dimen/text_size_body" />

                <RadioButton
                    android:id="@+id/ruoloVolontarioRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target_min"
                    android:text="@string/register_ruolo_volontario"
                    android:textSize="@dimen/text_size_body" />

                <RadioButton
                    android:id="@+id/ruoloFamiliareRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target_min"
                    android:text="@string/register_ruolo_familiare"
                    android:textSize="@dimen/text_size_body" />

            </RadioGroup>

            <TextView
                android:id="@+id/errorText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/care_error"
                android:textSize="@dimen/text_size_body"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/ruoloRadioGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_medium"
                tools:text="Seleziona un ruolo"
                tools:visibility="visible" />
            <!-- bottone completa la registrazione-->
            <Button
                android:id="@+id/completaButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:text="@string/completa_profilo_button"
                android:textSize="@dimen/text_size_button"
                android:backgroundTint="@color/care_primary"
                android:textColor="@color/care_on_primary"
                app:layout_constraintTop_toBottomOf="@id/errorText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_large" />

            <ProgressBar
                android:id="@+id/loadingIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>